8223632: Replace wildcard address with loopback or local host in tests - part 5
Replaces wildcard usage by loopback, when possible, adds intermittent keyword and a comment, when not.

Reviewed-by: chegar